--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,46 +1,26 @@
 {
-    "name": "primer-react-template",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@babel/core": "^7.24.0",
-        "@babel/plugin-syntax-flow": "^7.24.1",
-        "@babel/plugin-transform-react-jsx": "^7.23.4",
-        "@primer/octicons-react": "^19.8.0",
-        "@primer/primitives": "^7.17.0",
-        "@primer/react": "^36.13.0",
-        "eslint": "^8.57.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-is": "^18.2.0",
-        "styled-components": "^5.3.8",
-        "web-vitals": "^3.5.2"
-    },
-    "devDependencies": {
-        "eslint-config-react-app": "^7.0.1",
-        "react-scripts": "^5.0.1"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "eject": "react-scripts eject"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 3 chrome version",
-            "last 3 firefox version",
-            "last 3 safari version"
-        ]
-    }
+  "name": "latexdiff-web",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
+  "dependencies": {
+    "@giscus/react": "^3.0.0",
+    "antd": "^5.17.0",
+    "next": "14.2.3",
+    "react": "^18",
+    "react-dom": "^18"
+  },
+  "devDependencies": {
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
+    "typescript": "^5"
+  }
 }
