--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -86,6 +86,36 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./out
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          sparse-checkout: 'backend'
+          sparse-checkout-cone-mode: false
+      # All files should be moved to the project root.
+      - name: Move app files to root
+        run: |
+          ls -lah
+          shopt -s dotglob
+          mv backend/* .
+          rm -rf backend
+          mv ./out ./static
+          ls -lah
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      -
+        name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: am009
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: am009/latexdiff-web-backend:latest,am009/latexdiff-web-backend:${{ github.ref_name }}
 
   # Deployment job
   deploy:
