--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,16 +11,20 @@
   "dependencies": {
     "@giscus/react": "^3.0.0",
     "antd": "5.16.5",
+    "monaco-editor-webpack-plugin": "^7.1.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-monaco-editor": "^0.55.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "css-loader": "^7.1.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "style-loader": "^4.0.0",
     "typescript": "^5"
   }
 }
