Diff editor working!

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,20 +12,22 @@
     "@giscus/react": "^3.0.0",
     "antd": "5.16.5",
     "fflate": "^0.8.2",
+    "file-saver": "^2.0.5",
+    "monaco-editor": "^0.50.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18",
-    "react-monaco-editor": "^0.54.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "css-loader": "^7.1.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "monaco-editor-webpack-plugin": "^7.1.0",
     "style-loader": "^4.0.0",
-    "typescript": "^5",
-    "monaco-editor-webpack-plugin": "^7.1.0"
+    "typescript": "^5"
   }
 }
