--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,13 +9,15 @@ ARG PYTHON_MIRROR
 SHELL ["/bin/bash", "-c"]
 WORKDIR /root
 
+ENV PIP_BREAK_SYSTEM_PACKAGES=1
+
 RUN if [[ ! -z "$UBUNTU_MIRROR" ]] ; then sed -i "s/archive.ubuntu.com/$UBUNTU_MIRROR/g" /etc/apt/sources.list.d/ubuntu.sources && \
  sed -i "s/security.ubuntu.com/$UBUNTU_MIRROR/g" /etc/apt/sources.list.d/ubuntu.sources ; fi && \
  apt update && DEBIAN_FRONTEND=noninteractive apt install -y --no-install-recommends docker.io tar coreutils jq wget curl nano sudo \
  net-tools time python3 python3-pip python-is-python3 && \
  if [[ ! -z "$PYTHON_MIRROR" ]] ; then python3 -m pip config set global.index-url https://$PYTHON_MIRROR/simple ; fi && \
- python3 -m pip install --upgrade pip --break-system-packages && \
- python3 -m pip install flask flask-cors gunicorn --break-system-packages && \
+ python3 -m pip install --user --upgrade pip && \
+ python3 -m pip install --user flask flask-cors gunicorn && \
  apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 # Copy the backend api
